Added Docker support to project