@@ -9,15 +9,18 @@ buildscript {
     ext {}
 
     repositories {
-        mavenLocal()
         jcenter()
         maven { url("https://plugins.gradle.org/m2/") }
     }
     dependencies {
         classpath ("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath ("io.spring.gradle:dependency-management-plugin:${dependencyManagementPluginVersion}")
+
+        classpath( "com.bmuschko:gradle-docker-plugin:latest.release" )
     }
 }
+
+apply plugin: "application"
 
 apply plugin: "java"
 apply plugin: "eclipse"
@@ -26,8 +29,17 @@ apply plugin: "org.springframework.boot"
 
 apply plugin: "io.spring.dependency-management"
 
+//apply from: "${rootDir}/config/docker.gradle"
+
+apply plugin: com.bmuschko.gradle.docker.DockerRemoteApiPlugin
+apply plugin: com.bmuschko.gradle.docker.DockerJavaApplicationPlugin
+
+// import task classes
+import com.bmuschko.gradle.docker.tasks.image.*
+import com.bmuschko.gradle.docker.tasks.container.*
+
+
 repositories {
-    mavenLocal()
     jcenter()
     maven { url "https://plugins.gradle.org/m2/" }
 
@@ -69,3 +81,35 @@ dependencyManagement {
 //        mavenBom("io.spring.platform:platform-bom:${springIoVersion}")
 	}
 }
+
+//---------------------------------------------------------------------------//
+
+jar {
+    baseName = "configserver"
+    version =  "${this.version}"
+}
+
+task("execJar", type:Jar, dependsOn: "jar") {
+    baseName = "configserver"
+    version =  "${this.version}"
+    classifier = "exec"
+    from sourceSets.main.output
+}
+
+bootRepackage  {
+    withJarTask = tasks["execJar"]
+}
+
+dockerDistTar {
+    instruction {'RUN ls -la'}
+    environmentVariable('JAVA_OPTS', '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap')
+}
+docker {
+    javaApplication {
+    }
+}
+
+project.tasks.getByName("dockerDistTar").instructionsFromTemplate file("Dockerfile")
+
+
+//---------------------------------------------------------------------------//
